Spacing Issue Resolved

--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -6,10 +6,10 @@ $small : only screen and (max-width: 767px);
 @media #{$large} {
 
 
-  .double-img-height,
-  .normal-img-height {
-    height: auto;
-  }
+  // .double-img-height,
+  // .normal-img-height {
+  //   height: auto;
+  // }
 
   .home {
     .home-content {
@@ -65,6 +65,17 @@ $small : only screen and (max-width: 767px);
     }
   }
 
+  .works {
+    .masonary-container {
+      a {
+        .masonary-content {
+          .masonary-img {
+            height: auto;
+          }
+        }
+      }
+    }
+  }
 }
 
 /* MD Device :768px. 750px */
@@ -192,6 +203,19 @@ $small : only screen and (max-width: 767px);
     }
   }
 
+  .works {
+    .masonary-container {
+      a {
+        .masonary-content {
+          .masonary-img {
+            margin-bottom: 0 !important;
+            height: 350px;
+          }
+        }
+      }
+    }
+  }
+
   .service-2 {
     .services-2-img {
       height: auto;
@@ -271,34 +295,6 @@ $small : only screen and (max-width: 767px);
 
       &-designation {
         font-size: 14px;
-      }
-    }
-  }
-
-  .masonary-container {
-    .masonary-content {
-      .normal-img-height {
-        height: 250px;
-
-        img {
-          object-fit: cover;
-        }
-      }
-
-      .double-img-height {
-        height: 250px;
-
-        img {
-          object-fit: cover;
-          object-fit: cover;
-        }
-      }
-
-      .masonary-overlay {
-        img {
-          width: 25px;
-          height: 25px;
-        }
       }
     }
   }
@@ -473,7 +469,11 @@ $small : only screen and (max-width: 767px);
       }
     }
   }
+
 }
+
+
+
 
 
 /* Mobile Layout: 320px. 300px */
@@ -509,8 +509,6 @@ $small : only screen and (max-width: 767px);
       }
     }
   }
-
-
 
   .section-heading {
     padding-bottom: 20px;
@@ -597,10 +595,14 @@ $small : only screen and (max-width: 767px);
     }
   }
 
-  .masonary-container {
-    .masonary-content {
-      .masonary-img {
-        margin-bottom: 5px;
+  .works {
+    .masonary-container {
+      a {
+        .masonary-content {
+          .masonary-img {
+            margin-bottom: 5px !important;
+          }
+        }
       }
     }
   }
