--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -871,8 +871,6 @@ header {
 
       .masonary-img {
         position: relative;
-        height: 350px;
-
         img {
           height: 100%;
           object-fit: cover;
